Fix margin to align with the desired outcome png

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -14,7 +14,7 @@ body {
 .title,
 .content,
 .button-container{
-  margin:8px 0px;
+  margin-bottom:8px;
   padding: 8px;
   font-size: 24px;
 }
@@ -31,6 +31,7 @@ body {
 .button-container {
   background: #e3f4ff;
   text-align: center;
+  margin-bottom: 0;
 }
 
 button {
